# inrem

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  README.md  TESTING.md  docker-compose.yml  todo.md
back/: Dockerfile  README.md  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 209f8287b6d8_add_guardian_model.py  71228805b2b1_add_fcm_token_to_user.py  7718e8175c84_add_guardian_pulse_models.py  7fafa3ba0a2c_add_userconfig_and_timerstatus.py  990c0f877aeb_initial_schema.py  b5c6d7e8f9a0_add_onboarding_completed_at.py  c1a2b3d4e5f6_expand_assets_for_heritage_box.py  d2e8f4b6c1a3_add_user_deletion_requested_at.py  e3a9f1b2c4d5_guardians_unique_pair.py  f4b1c2a3d8e7_cross_user_fk_set_null.py
back/app/: main.py
back/app/api/: deps.py
back/app/core/: config.py  encryption.py  exceptions.py  logging.py  rate_limit.py  security.py
back/app/db/: base.py  session.py
back/app/models/: __init__.py  activity_signal.py  asset.py  audit.py  guardian.py  monitoring_policy.py  pulse_event.py  record.py  timer_status.py  user.py  user_config.py
back/app/repositories/: __init__.py  asset_repository.py  timer_repository.py  user_repository.py
back/app/schemas/: __init__.py  asset.py  auth.py  device.py  guardian.py  pulse.py  settings.py  signal.py  timer.py
back/tests/: conftest.py  test_account.py  test_account_cascade.py  test_auth_refresh.py  test_cors.py  test_email.py  test_guardian_security.py  test_heritage.py  test_logging.py  test_notification_provider.py  test_onboarding.py  test_settings.py  test_signal_status.py  test_timer.py
(+86 files in other folders)
